compiler/tests/success/common/dead_spill.jazz
export
fn main(reg u32 x) {
  #spill(x);
}
