compiler/tests/fail/arm-m4/mov_imm_shifted.jazz
export
fn main(reg u32 x) {
    x = #MOV(0x000cb000);
    [x] = x;
}
